fix(issue): disable measure tools when panel collapses, highlight active tool

--- a/src/components/ToolMenu/index.less
+++ b/src/components/ToolMenu/index.less
@@ -84,4 +84,9 @@
     border: none;
     border-radius: 0;
   }
+
+  .react-geo-togglebutton.btn-pressed {
+    font-size: 1.2em;
+    text-shadow: 0.5px 0.5px 0.5px grey;
+  }
 }
